logs/django-migratron.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_migratron-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/migratron'...
Compiling './lib/python3.5/site-packages/migratron/editor.py'...
***   File "./lib/python3.5/site-packages/migratron/editor.py", line 31
    print raw_input_editor('this is a test')
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/migratron/management'...
Listing './lib/python3.5/site-packages/migratron/management/commands'...
Compiling './lib/python3.5/site-packages/migratron/management/commands/createmigration.py'...
***   File "./lib/python3.5/site-packages/migratron/management/commands/createmigration.py", line 78
    print 'Invalid template: %s' % template
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/migratron/management/commands/migrate.py'...
***   File "./lib/python3.5/site-packages/migratron/management/commands/migrate.py", line 322
    print migration.filename
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/migratron/templates'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
